--- a/proyecto/.gitignore
+++ b/proyecto/.gitignore
@@ -7,18 +7,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node / Frontend
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Editor / OS
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Python / Backend
+backend/venv
+backend/.venv
+.env
+*.env
+__pycache__/
+*.py[cod]
+*$py.class
+*.sqlite3
+*.db
